--- a/web/index.html
+++ b/web/index.html
@@ -34,13 +34,48 @@
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
+
+<!-- 👇 Splash Screen -->
+<div id="splash-screen" style="
+  position: fixed;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background-color: #263238;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  font-family: 'Segoe UI', sans-serif;
+">
+    <img src="icons/Icon-192.png" width="80" height="80" alt="Chaanova Logo" style="margin-bottom: 20px;" />
+    <p style="color: #ffffff; font-size: 18px;">Launching Enhance Educations...</p>
+    <div style="margin-top: 16px; width: 40px; height: 40px; border: 4px solid #fff; border-top-color: transparent; border-radius: 50%; animation: spin 1s linear infinite;"></div>
+</div>
+
+<!-- 🌀 Spinner Animation -->
+<style>
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
+</style>
+
+<!-- Flutter App Bootstrap -->
 <script src="flutter_bootstrap.js" async></script>
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
+<!-- 👇 Auto-hide splash when Flutter loads -->
+<script>
+    window.addEventListener('flutter-first-frame', function () {
+      const splash = document.getElementById('splash-screen');
+      if (splash) splash.style.display = 'none';
+    });
+</script>
+
 <script>
     function openRazorpay(amount, email, contact, name) {
       var options = {
-        "key": "rzp_test_xOXw7iTfuggB8H", // Replace with your Razorpay Key ID
-        "amount": amount * 100, // Convert to paisa (e.g., 500 INR = 50000 paisa)
+        "key": "rzp_test_xOXw7iTfuggB8H",
+        "amount": amount * 100,
         "currency": "INR",
         "name": name,
         "description": "Online Class Payment",
@@ -52,15 +87,15 @@
           "color": "#F37254"
         },
         "handler": function (response) {
-        if (window.razorpaySuccess) {
-          window.razorpaySuccess(response.razorpay_payment_id);
-        }
+          if (window.razorpaySuccess) {
+            window.razorpaySuccess(response.razorpay_payment_id);
+          }
         },
         "modal": {
-          "ondismiss": function() {
-          if (window.razorpayFailed) {
-            window.razorpayFailed("User closed the payment.");
-          }
+          "ondismiss": function () {
+            if (window.razorpayFailed) {
+              window.razorpayFailed("User closed the payment.");
+            }
           }
         }
       };
