--- a/web/index.html
+++ b/web/index.html
@@ -14,12 +14,12 @@
       This is a placeholder for base href that will be replaced by the value of
       the `--base-href` argument provided to `flutter build`.
     -->
-    <base href="$FLUTTER_BASE_HREF">
+    <base href="/register_now/">
 
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
     <meta name="description"
-          content="Chaanova is a powerful online learning platform built with Flutter Web and Firebase, offering seamless online classes, student registration, and secure payment integration. With fast loading times and a real-time loading timer, Chaanova ensures a smooth and engaging learning experience for students and educators alike.">
+          content="Powerful online learning platform built with Flutter Web and Firebase, offering seamless online classes, student registration, and secure payment integration. With fast loading times and a real-time loading timer, Chaanova ensures a smooth and engaging learning experience for students and educators alike.">
 
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
