razor pay payment updated

--- a/web/index.html
+++ b/web/index.html
@@ -73,7 +73,7 @@
 <script>
     function openRazorpay(amount, email, contact, name) {
       var options = {
-        "key": "rzp_live_Qmr8s0l72G8wYQ",
+        "key": "rzp_live_pTVltjyVcqmdZ2",
         "amount": amount * 100,
         "currency": "INR",
         "name": name,
